// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectListField component should display the field as empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <label
          class="control-label"
        >
          Form fields
        </label>
        <p>
          No field
        </p>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          type="button"
        >
          <i
            aria-hidden="true"
            class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
          >
            add
          </i>
          <span
            class="ui-button-content-cef1"
          >
            Add 
            field
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <label
        class="control-label"
      >
        Form fields
      </label>
      <p>
        No field
      </p>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          add
        </i>
        <span
          class="ui-button-content-cef1"
        >
          Add 
          field
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ObjectListField component should display the field with items 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <label
          class="control-label"
        >
          Form fields
        </label>
        <div
          class="mb-3 form-row row"
        >
          <div
            class="col-5"
          >
            <div
              class="InputField required form-group"
              color="danger"
            >
              <div
                class=""
              >
                <input
                  class="field form-control-danger is-invalid form-control"
                  id="id-key"
                  pattern="Header name contains invalid characters"
                  placeholder="Key"
                  required=""
                  type="text"
                  value="bar"
                />
                <div
                  class="invalid-feedback"
                >
                  Header name contains invalid characters
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex-grow col"
          >
            <div
              class="InputField required form-group"
              color="danger"
            >
              <div
                class=""
              >
                <input
                  class="field form-control-danger is-invalid form-control"
                  id="id-value"
                  placeholder="Value"
                  required=""
                  type="text"
                  value="foo"
                />
                <div
                  class="invalid-feedback"
                >
                  Header name contains invalid characters
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-auto"
          >
            <button
              aria-disabled="false"
              class="ui-button-wrapper-cef1 float-right wrapper ui-button-fill-cef1 ui-button-destructive-cef1"
              title="Remove field"
              type="button"
            >
              <span
                class="ui-button-content-cef1"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </span>
            </button>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          type="button"
        >
          <i
            aria-hidden="true"
            class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
          >
            add
          </i>
          <span
            class="ui-button-content-cef1"
          >
            Add 
            field
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <label
        class="control-label"
      >
        Form fields
      </label>
      <div
        class="mb-3 form-row row"
      >
        <div
          class="col-5"
        >
          <div
            class="InputField required form-group"
            color="danger"
          >
            <div
              class=""
            >
              <input
                class="field form-control-danger is-invalid form-control"
                id="id-key"
                pattern="Header name contains invalid characters"
                placeholder="Key"
                required=""
                type="text"
                value="bar"
              />
              <div
                class="invalid-feedback"
              >
                Header name contains invalid characters
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex-grow col"
        >
          <div
            class="InputField required form-group"
            color="danger"
          >
            <div
              class=""
            >
              <input
                class="field form-control-danger is-invalid form-control"
                id="id-value"
                placeholder="Value"
                required=""
                type="text"
                value="foo"
              />
              <div
                class="invalid-feedback"
              >
                Header name contains invalid characters
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-auto"
        >
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 float-right wrapper ui-button-fill-cef1 ui-button-destructive-cef1"
            title="Remove field"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                delete
              </i>
            </span>
          </button>
        </div>
      </div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          add
        </i>
        <span
          class="ui-button-content-cef1"
        >
          Add 
          field
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
